--- a/src/main/resources/templates/course_index.html
+++ b/src/main/resources/templates/course_index.html
@@ -27,6 +27,7 @@
         </button>
     </a>
 </div>
+<div th:insert="search :: bar(url=${'/Course/Search'})"></div>
 <table class="table table-striped">
     <thead class="thead-dark">
     <tr>
