--- a/src/main/resources/templates/comment_form.html
+++ b/src/main/resources/templates/comment_form.html
@@ -12,12 +12,12 @@
     <input type="hidden" th:field="*{id}">
     <input type="hidden" name="solutionId" th:value="${solutionId}">
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">
+        <label class="col-sm-1 col-form-label">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "content")}'></th:block>:
         </label>
         <div class="col-sm-6">
-            <input type="text" th:field="*{content}" class="form-control"/>
-            <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="text-danger"></p>
+            <textarea class="form-control" th:field="*{content}"></textarea>
+            <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="text-danger" rows="4"></p>
         </div>
     </div>
     <div class="form-group row">
