--- a/src/main/resources/templates/assignment_form.html
+++ b/src/main/resources/templates/assignment_form.html
@@ -39,7 +39,7 @@
             </select>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row" th:if="${!isCreateAction}">
         <label class="col-sm-2 col-form-label">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("assignment", "teacher")}'></th:block>:
         </label>
@@ -50,6 +50,7 @@
                         th:selected="${teachers.get(0)}">
                 </option>
             </select>
+            <input type="hidden" th:field="*{teacher}">
         </div>
     </div>
     <div class="form-group row">
