Small bundle fix

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -60,8 +60,8 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Authentication/Logout">
-                    <th:block th:text='${T(com.smanager.Bundles).getMessage("menu", "signOut")}'></th:block>
+                <a class="nav-link" href="/login">
+                    <th:block th:text='${T(com.smanager.Bundles).getMessage("menu", "signIn")}'></th:block>
                 </a>
             </li>
         </ul>
