--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -12,6 +12,7 @@
     <input type="hidden" th:field="*{id}">
     <input type="hidden" th:field="*{creationDate}">
     <input th:if="${!isCreate}" type="hidden" th:field="*{assignment}">
+    <input type="hidden" th:field="*{student}">
     <div class="form-group row">
         <label for="titleInput" class="col-sm-2 col-form-label">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "content")}'></th:block>:
@@ -44,7 +45,7 @@
     <div th:if="${user.isStudent()}">
         <input type="hidden" th:field="*{grade}">
     </div>
-    <div th:if="${!isCreate}" class="form-group row">
+    <div th:if="${user.isAdmin()}" class="form-group row">
         <label class="col-sm-2 col-form-label">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "student")}'></th:block>:
         </label>
@@ -77,9 +78,20 @@
         <div class="col-sm-6">
             <input type="file" name="file" class="form-control-file"/>
         </div>
-        <div th:if="${uploadedFile != null}">
-            <a th:href="${uploadedFile}">Download</a>
+    </div>
+    <div th:if="${uploadedFile != null}" class="form-group row">
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "attachment")}'></th:block>:
+        </label>
+        <div class="col-sm-6">
+            <a th:href="${uploadedFile}"><th:block th:text="${solution.getPath()}"></th:block></a>
         </div>
+    </div>
+    <div th:if="${uploadedFile != null}" class="form-group row">
+        <label class="col-sm-2 col-form-label">
+            Remove file:
+        </label>
+        <input type="checkbox" name="removeFile" class="form-control">
     </div>
     <div class="form-group row">
         <div class="col-sm-6">
