--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -91,7 +91,9 @@
         <label class="col-sm-2 col-form-label">
             Remove file:
         </label>
-        <input type="checkbox" name="removeFile" class="form-control">
+        <div class="form-check">
+            <input type="checkbox" name="removeFile" class="form-control">
+        </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-6">
