--- a/src/main/resources/templates/assignment_details.html
+++ b/src/main/resources/templates/assignment_details.html
@@ -27,7 +27,7 @@
         <p class="col-sm-2">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("assignment", "content")}'></th:block>:
         </p>
-        <p th:utext="${parsedContent}" class="col-sm-6"></p>
+        <p th:utext="${assignment.getContent()}" class="col-sm-6"></p>
     </div>
     <div class="form-group row">
         <p class="col-sm-2">
@@ -40,6 +40,12 @@
             <th:block th:text='${T(com.smanager.Bundles).getMessage("assignment", "course")}'></th:block>:
         </p>
         <p th:utext="${assignment.getCourse()}" class="col-sm-6"></p>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-2">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("assignment", "attachment")}'></th:block>:
+        </p>
+        <a class="col-sm-6" th:href="${uploadedFile}"><th:block th:text="${assignment.getPath()}"></th:block></a>
     </div>
 </div>
 </body>
