--- a/src/main/resources/templates/assignment_form.html
+++ b/src/main/resources/templates/assignment_form.html
@@ -61,6 +61,25 @@
             <input type="file" name="file" class="form-control-file"/>
         </div>
     </div>
+
+    <div th:if="${uploadedFile != null}" class="form-group row">
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("assignment", "attachment")}'></th:block>:
+        </label>
+        <div class="col-sm-6">
+            <a th:href="${uploadedFile}"><th:block th:text="${assignment.getPath()}"></th:block></a>
+        </div>
+    </div>
+    <div th:if="${uploadedFile != null}" class="form-group row">
+        <label class="col-sm-2 col-form-label">
+            Remove file:
+        </label>
+        <div class="form-check">
+            <input type="checkbox" name="removeFile" class="form-control">
+        </div>
+    </div>
+
+
     <div class="form-group row">
         <div class="col-sm-6">
             <button type="submit" class="btn btn-primary">
