--- a/src/main/resources/templates/courseTeacherRegister_form.html
+++ b/src/main/resources/templates/courseTeacherRegister_form.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "student")}'></th:block>:
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "teacher")}'></th:block>:
         </label>
         <div class="col-sm-6">
             <select th:field="*{teacher}" class="form-control">
