--- a/src/main/resources/templates/header_user.html
+++ b/src/main/resources/templates/header_user.html
@@ -70,6 +70,9 @@
                 </a>
             </li>
         </ul>
+        <span class="navbar-brand">
+            <th:block th:text="${user.getUsername()}"></th:block>
+        </span>
     </div>
 </nav>
 </body>
