--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -28,7 +28,7 @@
             <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "finished")}'></th:block>:
         </label>
         <div class="form-check">
-            <input type="checkbox" id="isFinished" th:field="*{finished}" class="form-control"/>
+            <input type="checkbox" id="isFinished" th:field="*{finished}" class="form-check-input"/>
         </div>
     </div>
     <div th:if="${!user.isStudent()}" class="form-group row">
@@ -94,7 +94,7 @@
             Remove file:
         </label>
         <div class="form-check">
-            <input type="checkbox" name="removeFile" class="form-control">
+            <input type="checkbox" name="removeFile" class="form-check-input">
         </div>
     </div>
     <div class="form-group row">
