Added icon indicating if solution is finished. Added icon when solution has any comments available.

--- a/src/main/resources/templates/work_index.html
+++ b/src/main/resources/templates/work_index.html
@@ -39,7 +39,8 @@
                             <div class="collapse show" th:id="'solutions-container-' + ${assignment.getId()} + '-' + ${i.count}">
                                 <th:block th:each="solution : ${assignmentsSolutions.get(assignment)}">
                                     <div class="list-group-item" th:id="${course.getId()} + '' + ${assignment.getId()} + '' + ${solution.getId()}">
-                                        <div th:insert="solution_fragment :: div_view(solution=${solution}, user=${user})"></div>
+                                        <div th:insert="solution_fragment :: div_view(solution=${solution}, user=${user})">
+                                        </div>
                                         <button class="btn btn-primary" type="button" data-toggle="collapse" th:href="'#comments-' + ${solution.getId()}"
                                                 role="button" aria-controls="'comments-' + ${solution.getId()}">
                                             <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "showComments")}'></th:block>
