--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -47,6 +47,14 @@
     </div>
     <div class="form-group row">
         <p class="col-sm-10">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("comment", "comments")}'></th:block>:
+            <th:block th:text="${solution.getComments().size()}"></th:block>
+            <i th:if="${solution.getComments().size() > 0}" class="material-icons">question_answer</i>
+        </p>
+        <i th:if="${solution.isFinished()}" class="material-icons col-sm-2 right-aligned">done</i>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-10">
             <a th:href="${solution.getPath(paths)}">
                 <button class="btn btn-primary link-icon">
                     <i class="material-icons link-icon">attachment</i>
