--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -28,6 +28,14 @@
         </div>
     </div>
     <div class="form-group row">
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "saveToCourse")}'></th:block>:
+        </label>
+        <div class="form-check">
+            <input type="checkbox" name="saveToCourse" value="true" class="form-check-input">
+        </div>
+    </div>
+    <div class="form-group row">
         <div class="col-sm-6">
             <button type="submit" class="btn btn-primary">
                 <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "submit")}'></th:block>
